<resources>
    <string name="app_name">NestedScroller</string>
    <string name="with_rv">配合 RecyclerView</string>
    <string name="with_vp">配合 ViewPager</string>
    <string name="with_ns">配合 NestedScrollView</string>
    <string name="text_1">离骚\n
[先秦] 屈原\n
帝高阳之苗裔兮，朕皇考曰伯庸。\n
摄提贞于孟陬兮，惟庚寅吾以降。\n
皇览揆余初度兮，肇锡余以嘉名：\n
名余曰正则兮，字余曰灵均。\n
纷吾既有此内美兮，又重之以修能。\n
扈江离与辟芷兮，纫秋兰以为佩。\n
汨余若将不及兮，恐年岁之不吾与。\n
朝搴阰之木兰兮，夕揽洲之宿莽。\n
日月忽其不淹兮，春与秋其代序。\n
唯草木之零落兮，恐美人之迟暮。\n(唯 通：惟)
不抚壮而弃秽兮，何不改乎此度?\n
乘骐骥以驰骋兮，来吾道夫先路。\n</string>

    <string name="text_2">
昔三后之纯粹兮，固众芳之所在。\n
杂申椒与菌桂兮，岂惟纫夫蕙茞。\n
彼尧、舜之耿介兮，既遵道而得路。\n
何桀纣之猖披兮，夫惟捷径以窘步。\n
惟夫党人之偷乐兮，路幽昧以险隘。\n
岂余身之殚殃兮，恐皇舆之败绩。\n
忽奔走以先后兮，及前王之踵武。\n
荃不查余之中情兮，反信谗而齌怒。\n
余固知謇謇之为患兮，忍而不能舍也。\n
指九天以为正兮，夫惟灵修之故也。\n
曰黄昏以为期兮，羌中道而改路。\n
初既与余成言兮，后悔遁而有他。\n
    </string>

    <string name="text_3">
        余既不难夫离别兮，伤灵修之数化。\n
余既滋兰之九畹兮，又树蕙之百亩。\n
畦留夷与揭车兮，杂杜衡与芳芷。\n
冀枝叶之峻茂兮，愿俟时乎吾将刈。\n
虽萎绝其亦何伤兮，哀众芳之芜秽。\n
众皆竞进以贪婪兮，凭不厌乎求索。\n
羌内恕己以量人兮，各兴心而嫉妒。\n
忽驰骛以追逐兮，非余心之所急。\n
老冉冉其将至兮，恐修名之不立。\n
朝饮木兰之坠露兮，夕餐秋菊之落英。\n
苟余情其信姱以练要兮，长顑颔亦何伤。\n
掔木根以结茞兮，贯薜荔之落蕊。\n
    </string>
</resources>
