<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="30dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/with_rv"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/with_vp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/with_ns"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_horizontal_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="可以水平滑动的Header"
        android:textAllCaps="false" />
</LinearLayout>