<?xml version="1.0" encoding="utf-8"?>
<com.mrh.nested_scroller.NestedScrollLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mrh.nested_scroller.child.NestedHeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/girl" />
    </com.mrh.nested_scroller.child.NestedHeaderView>

    <com.mrh.nested_scroller.child.NestedBodyView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#33FFC4"
            android:gravity="center_vertical"
            android:paddingVertical="10dp"
            android:text="下边的内容是一个NestedScrollView"
            android:textColor="#000" />

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ns.NestedScrollViewActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_1"
                    android:textColor="#333"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_2"
                    android:textColor="#333"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_3"
                    android:textColor="#333"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_3" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </com.mrh.nested_scroller.child.NestedBodyView>
</com.mrh.nested_scroller.NestedScrollLayout>